--- a/VendingMachine/appsettings.json
+++ b/VendingMachine/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=VendingMachine;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=VendingMachine;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
